--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
 		"typescript": "^5.5.2",
 		"vitest": "~2.1.9",
 		"wrangler": "^3.110.0"
+	},
+	"dependencies": {
+		"@cloudflare/puppeteer": "^0.0.14",
+		"@hono/node-server": "^1.13.8",
+		"mimetext": "^3.0.27"
 	}
 }
