--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -35,6 +35,14 @@
       }
     ]
   },
+  "migrations": [
+    {
+      "tag": "v1",
+      "new_classes": [
+        "BrowserDo"
+      ]
+    }
+  ]
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
