Updates dependencies and migrates config to TOML
Upgrades core and dev dependencies for compatibility and security.
Removes old JSON and JSONC config files, migrating environment and deployment configuration to TOML as recommended by latest tooling.
Simplifies local development and deployment scripts.

No functional code changes; improves maintainability and aligns with current best practices.

--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
 	"private": true,
 	"scripts": {
 		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
-		"start": "wrangler dev",
+		"dev": "wrangler dev --remote",
+		"start": "wrangler dev --remote",
 		"test": "vitest",
 		"cf-typegen": "wrangler types"
 	},
 	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "^0.6.4",
-		"@cloudflare/workers-types": "^4.20250224.0",
-		"typescript": "^5.5.2",
-		"vitest": "~2.1.9",
-		"wrangler": "^3.110.0"
+		"@cloudflare/vitest-pool-workers": "^0.8.47",
+		"@cloudflare/workers-types": "^4.20250628.0",
+		"typescript": "^5.8.3",
+		"vitest": "~3.2.4",
+		"wrangler": "^4.22.0"
 	},
 	"dependencies": {
-		"@cloudflare/puppeteer": "^0.0.14",
-		"@hono/node-server": "^1.13.8",
+		"@cloudflare/puppeteer": "^1.0.3",
+		"@hono/node-server": "^1.14.4",
 		"mimetext": "^3.0.27"
 	}
 }
