--- a/wrangler.toml
+++ b/wrangler.toml
@@ -25,7 +25,7 @@ bindings = [
 
 [[migrations]]
 tag = "v1"
-new_classes = ["BrowserDo"]
+new_sqlite_classes = ["BrowserDo"]
 
 [observability]
 enabled = true
